--- a/Settings.cfg
+++ b/Settings.cfg
@@ -17,7 +17,7 @@ List = [iI for iI in range(1)]
 [Frequenz]
 Anf = 0
 End = 20
-List = [iF for iF in range(1)]
+List = [iF for iF in range(SN)]
 
 [Constraints]
 Spur_Konstante = 1
@@ -26,7 +26,7 @@ List = [1]
 
 [System_sizes]
 Erste_Schale = 1 
-Schalen_Anzahl = 3
+Schalen_Anzahl = 5
 
 [Test]
 StartWithGivenMinima = true
