--- a/Numerical_CFS/config/Settings.cfg
+++ b/Numerical_CFS/config/Settings.cfg
@@ -12,7 +12,7 @@ Frequenz = false
 [Impuls]
 Anf = 0
 End =15 
-List = [iI for iI in range(1)]
+List = [iI for iI in range(SN)]
 
 [Frequenz]
 Anf = 0
@@ -21,12 +21,12 @@ List = [iF for iF in range(SN)]
 
 [Constraints]
 Spur_Konstante = 1
-Boundary_Konstante = 0.0
+Boundary_Konstante = 0.005
 List = [1]
 
 [System_sizes]
 Erste_Schale = 1 
-Schalen_Anzahl = 2
+Schalen_Anzahl =7
 
 [Test]
 StartWithGivenMinima = true
