Commit after a lot of changes

--- a/Numerical_CFS/config/Settings.cfg
+++ b/Numerical_CFS/config/Settings.cfg
@@ -27,7 +27,7 @@ List = [1]
 [System_sizes]
 Erste_Schale = 1 
 Schalen_Anzahl =7
-
+LifeTime = 1 
 [Test]
 StartWithGivenMinima = true
 Test_Action = false
