Added Dockerfile and some other stuff

--- a/Numerical_CFS/config/Settings.cfg
+++ b/Numerical_CFS/config/Settings.cfg
@@ -1,33 +1,33 @@
 [Vary_Parameters]
-Gewichte = true
-Impulse = true
-Frequenz = false
-
+gewichte = true
+impulse = true
+frequenz = false
 
 [Set_Initialstate_randomly]
-Weights = false
-Impuls = false
-Frequenz = false
+weights = false
+impuls = false
+frequenz = false
 
 [Impuls]
-Anf = 0
-End =15 
-List = [iI for iI in range(SN)]
+anf = 0
+end = 15
+list = [iI for iI in range(SN)]
 
 [Frequenz]
-Anf = 0
-End = 20
-List = [iF for iF in range(SN)]
+anf = 0
+end = 20
+list = [iF for iF in range(SN)]
 
 [Constraints]
-Spur_Konstante = 1
-Boundary_Konstante = 0.005
-List = [1]
+spur_konstante = 1
+boundary_konstante = 0.005
+list = [1]
 
 [System_sizes]
-Erste_Schale = 1 
-Schalen_Anzahl =7
-LifeTime = 1 
+erste_schale = 1
+schalen_anzahl = 3
+
 [Test]
-StartWithGivenMinima = true
-Test_Action = false
+startwithgivenminima = true
+test_action = false
+
