--- a/Numerical_CFS/config/Settings.cfg
+++ b/Numerical_CFS/config/Settings.cfg
@@ -11,12 +11,12 @@ frequenz = false
 [Impuls]
 anf = 0
 end = 15
-list = [iI for iI in range(SN)]
+list = [iI for iI in range(1)]
 
 [Frequenz]
 anf = 0
 end = 20
-list = [iF for iF in range(SN)]
+list = [iF for iF in range(1)]
 
 [Constraints]
 spur_konstante = 1
@@ -25,8 +25,8 @@ list = [1]
 
 [System_sizes]
 erste_schale = 1
-schalen_anzahl = 3
-
+schalen_anzahl = 1
+lifetime = 1
 [Test]
 startwithgivenminima = true
 test_action = false
