--- a/Dockers/Dockerfile
+++ b/Dockers/Dockerfile
@@ -3,6 +3,7 @@ FROM cfsprebase
 ADD ./dist /dist
 ADD ./build /build
 RUN ls /dist
+RUN pip3 install --upgrade pip
 RUN pip3 install /dist/Numerical_CFS_Docker-0.1.9.8.1.tar.gz 
 #RUN pip3 install --upgrade Numerical-CFS
 
