--- a/Dockers/Extra_Dockerfiles/Dockerfile
+++ b/Dockers/Extra_Dockerfiles/Dockerfile
@@ -7,9 +7,9 @@ RUN apt-get -y dist-upgrade
 RUN apt-get -y install python-software-properties
 RUN apt-get -y install software-properties-common
 RUN apt-get update
-ADD ./dist /dist
-RUN ls /dist
-RUN pip3 install /dist/Numerical_CFS-0.1.9.5.tar.gz 
+#ADD /home/mustafa/Regensburg/Causal-Fermion-System-of-Dirac-Sphere/dist /dist
+#RUN ls /dist
+#RUN pip3 install /dist/Numerical_CFS-0.1.9.5.tar.gz 
 #RUN pip3 install --upgrade Numerical-CFS
   
 RUN apt-get -y install python3-dev
@@ -22,6 +22,9 @@ RUN apt-get -y install libsymengine-dev
 
 
 RUN apt-get -y install python3-pip
+#der nächste Teil sollte bald raus, ich habs nur jetzt hier weil cache veraltet ist.
+RUN pip3 install --upgrade setuptools 
+#
 COPY ./requirements_for_docker.txt / 
 
 RUN pip3 install -r ./requirements_for_docker.txt 
