--- a/Numerical_CFS/config/Settings.cfg
+++ b/Numerical_CFS/config/Settings.cfg
@@ -11,12 +11,12 @@ frequenz = false
 [Impuls]
 anf = 0
 end = 15
-list = [iI for iI in range(1)]
+list = np.linspace(0,1,1)
 
 [Frequenz]
 anf = 0
 end = 20
-list = [iF for iF in range(1)]
+list = np.linspace(0,1,1)
 
 [Constraints]
 spur_konstante = 1
