some minor changes

--- a/Numerical_CFS/config/Settings.cfg
+++ b/Numerical_CFS/config/Settings.cfg
@@ -1,6 +1,6 @@
 [Vary_Parameters]
 gewichte = true
-impulse = true
+impulse = false
 frequenz = false
 
 [Set_Initialstate_randomly]
@@ -11,17 +11,17 @@ frequenz = false
 [Impuls]
 anf = 0
 end = 15
-list = np.linspace(0,1,1)
+list =np.array([ 2.93428105,1.03768175,0.15901993 ,0.06763482] )
 
 [Frequenz]
 anf = 0
 end = 20
-list = np.linspace(0,1,1)
+list = np.linspace(0,3,4)
 
 [Constraints]
 spur_konstante = 100
 boundary_konstante = 0.005
-list = [100]
+list = np.array([20.54674501 ,5.76987572 ,1.84848497 ,0.1052718])
 
 [System_sizes]
 erste_schale = 1
